--- a/url_sch_item.html
+++ b/url_sch_item.html
@@ -7,6 +7,35 @@
     <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
+    <div class="app_item">
+        <div class="app_item_title_placer">
+            <img src="./app_icon/zhifubao.png" alt="app_icon" class="app_icon"/>
+            <div style="display: inline-flex;flex-direction: column;justify-content: center">
+                <span class="app_title">支付宝</span>
+                <span class="tags_holder"></span>
+            </div>
+        </div>
+
+        <div class="pages_container">
+            
+            <div class="page_item">
+                <div class="page_info">
+                    <div class="page_title">支付宝</div>
+                    <div class="page_url_content">alipay://</div>
+                </div>
+                <div class="url_btn_group">
+                    <button class="btn_create_shortcut elegant_btn">
+                        <span>添加到快捷指令</span>
+                        <img src="./img/shortcut.svg">
+                    </button>
+                    <button class="btn_open_url elegant_btn">
+                        <img src="/img/start_v2.svg">
+                        <span>启动</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
