--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="content">
-
+        <div id="msgbox"></div>
         <div id="main_content">
             <div id="nav">
 
