complete page_item's behavior when unfolding

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>URL Scheme 快捷启动应用</title>
     <link rel="stylesheet" href="style/index.css">
     <link rel="stylesheet" href="./style/app_item.css">
+    <link rel="stylesheet" href="./style/pop_up.css">
 
     <script src="/script/index.js"></script>
     <script src="/script/app_item.js"></script>
     <script src="/script/search.js"></script>
     <script src="/script/search_cache.js"></script>
+    <script src="/script/pop_up.js"></script>
 </head>
 <body>
     <div id="content">
