make every function available

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <script src="/script/index.js"></script>
     <script src="/script/app_item.js"></script>
     <script src="/script/search.js"></script>
-    <script src="/script/search_cache.js"></script>
     <script src="/script/pop_up.js"></script>
 </head>
 <body>
@@ -27,7 +26,7 @@
 
                 <div id="search" class="nav_row">
                     <input type="text" id="txt_search_word">
-                    <button id="btn_search" class="" onclick="load_items()">
+                    <button id="btn_search" class="" onclick="start_search()">
                         <img src="./img/search1.png" height="30px" >
                     </button>
                 </div>
