--- a/url_sch_item.html
+++ b/url_sch_item.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="app_item">
-        <div class="app_item_title_placer">
+        <div class="app_item_info_placer">
             <img src="./app_icon/zhifubao.png" alt="app_icon" class="app_icon"/>
             <div style="display: inline-flex;flex-direction: column;justify-content: center">
                 <span class="app_title">支付宝</span>
