--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <span class="nav_row" id="project_title">
                     <img id="project_icon" src="./img/default_icon.png" alt="icon" height="50px" >
                     <span>URL Scheme 快捷启动应用</span>
+                    <img src="./img/puzzled.svg" alt="" height="15px" width="18px" onclick="user_guide()">
                 </span>
 
                 <div id="search" class="nav_row">
