enhence appearence; add some url schemes

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div id="main_content">
             <div id="nav">
 
-                <span class="nav_row" id="project_title">
+                <span class="nav_row" id="project_title_placer">
                     <img id="project_icon" src="./img/default_icon.png" alt="icon" height="50px" >
-                    <span>URL Scheme 快捷启动应用</span>
+                    <span id="project_title">URL Scheme 快捷启动应用</span>
                     <img src="./img/puzzled.svg" alt="" height="15px" width="18px" onclick="user_guide()">
                 </span>
 
