add some url data; add a new appearence for complitity check

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./style/app_item.css">
     <link rel="stylesheet" href="./style/pop_up.css">
 
+    <link rel="icon" href="/img/default_icon.png">
+
     <script src="/script/index.js"></script>
     <script src="/script/app_item.js"></script>
     <script src="/script/search.js"></script>
